# gooroom-toolkit

./: Makefile.am  configure.ac.in
data/: Makefile.am  gooroom-toolkit.desktop.in.in  kr.gooroom.toolkit.policy.in.in  toolpackages.json
data/icons/: Makefile
data/icons/scalable/: Makefile
data/icons/scalable/apps/: Makefile  Makefile.am
debian/: changelog  control  copyright
modules/: Makefile.am  Makefile.in
modules/scratch/: Makefile.am  Makefile.in  scratch.sh
modules/scratch/icons/: Makefile.in
modules/scratch/icons/scalable/: Makefile.in
modules/scratch/icons/scalable/apps/: Makefile.am  Makefile.in
modules/scratch/src/: Makefile.am  Makefile.in  kr.gooroom.pkexec.npm.policy.in.in  npm-start.desktop.in.in  scratch-exec.c  scratch.desktop.in.in
modules/veyon/: Makefile.in
modules/veyon/icons/: Makefile.in
modules/veyon/icons/scalable/: Makefile.in
modules/veyon/icons/scalable/apps/: Makefile.am  Makefile.in
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  button_main.ui  gooroomtoolkit.cc  gooroomtoolkit.h  grdefault.h  gresource.xml  grfetchprogress.cc  grfetchprogress.h  grinstallprogress.cc  grinstallprogress.h  grmainwindow.cc  grmainwindow.h  grmkit-button.c  grmkit-button.h  grpackage.cc  grpackage.h  grpackagemanager.cc  grpackagemanager.h  grparser.cc  grparser.h  gruserdialog.cc  gruserdialog.h  grutils.cc  grutils.h  grwindow.cc  grwindow.h  scratch.sh  window_fetch.ui  window_main.ui  window_toolinstall_progress.ui
